kubernetes/platform/docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-docs-ingress
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: docs.vijaysingh.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homelab-docs
            port:
              number: 80
